[gd_scene load_steps=6 format=3 uid="uid://c3yp73qcsn3ek"]

[ext_resource type="Script" path="res://trooper.gd" id="1_5up2n"]
[ext_resource type="AudioStream" uid="uid://bxyos7sfr31og" path="res://sounds/hshhoot.wav" id="2_bd0v0"]
[ext_resource type="Texture2D" uid="uid://ypfm7ev122ky" path="res://sprites/Trooper.png" id="2_u35rf"]
[ext_resource type="AudioStream" uid="uid://cuo4u6plkuqdy" path="res://sounds/ded.wav" id="3_kqnx2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef7ef"]
size = Vector2(79.905, 119)

[node name="node" type="Node2D"]
script = ExtResource("1_5up2n")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bd0v0")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kqnx2")
volume_db = -6.209
pitch_scale = 1.24
panning_strength = 5.19

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -79)
scale = Vector2(5, 5)
texture = ExtResource("2_u35rf")

[node name="SHOOT DIR" type="Node2D" parent="."]
position = Vector2(0, -57)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -61)
shape = SubResource("RectangleShape2D_ef7ef")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
